Add html skeleton with classes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,63 @@
     <title>Landing Page</title>
 </head>
 <body>
+     <!--Topo da página-->
+    <div class="header">
+        Header Logo
+        <div class="hlinks"> <!--Editar links para flexbox-->
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div> <!--Fecha o hlinks-->
+    </div> <!--Fecha o header geral-->
     
+    <!--Apresentação da página-->
+    <div class="body"> <!--Alinhar de maneira igual estes elementos-->
+        <div class="title">This website is awesome</div>
+        <div class="bodytext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <button>Sign up</button>
+    </div> <!--Alinhar para a direita-->
+        <div class="placeholder">this is a placeholder for an image</div>
+
+    <!--Conteúdo da página-->
+    <div class="container">
+        <div class="cont-title">Some random information</div>
+        <div class="info"> <!--Editar cada espaço separadamente-->
+            <div class="space"></div>
+            <div class="card">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+            <div class="space"></div>
+            <div class="card">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+            <div class="space"></div>
+            <div class="card">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+            <div class="space"></div>
+            <div class="card">this is some subtext under an illustration or image</div>
+        </div>
+    </div>
+
+    <!--Citação-->
+    <div class="quotebody">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="thor">-Thor, God of Thunder</div>
+    </div>
+
+    <!--Pare final do conteúdo do site-->
+    <div class="call"> <!--Editar o espaço do menu-->
+        <div class="callbody"> <!--Texto a esquerda-->
+            <div class="textbold">Call to action! It's time!</div>
+            <div class="textregular">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button>Sign Up</button>
+    </div>
+    <div class="footer">
+        Copyright © The Odin Project
+    </div>
 </body>
 </html>
