--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <div class="header">
+        <div class="header-left">
+            <div class="logo">Header Logo</div>
+        </div>
+        <div class="header-right">
+            <div class = "header-item">header link one</div>
+            <div class="header-item">header link two</div>
+            <div class="header-item">header link three</div>
+        </div>
+    </div>
 </body>
 </html>
