Display body of text below Header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <!--Header finalizado-->
     <div class="header">
         <div class="header-left">
             <div class="logo">Header Logo</div>
@@ -16,6 +17,17 @@
             <div class = "header-item">header link one</div>
             <div class="header-item">header link two</div>
             <div class="header-item">header link three</div>
+        </div>
+    </div>
+    <!--Corpo de texto do site finalizado-->
+    <div class="body">
+        <div class="body-left">
+            <div class="body-title">This website is awesome</div>
+            <div class="body-content">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
+            <button class="sign-up">Sign up</button>
+        </div>
+        <div class="body-right">
+            <div class="placeholder">this is a placeholder for an image</div>
         </div>
     </div>
 </body>
