Add Some random information text

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="header-item">header link three</div>
         </div>
     </div>
+
     <!--Corpo de texto do site finalizado-->
     <div class="body">
         <div class="body-left">
@@ -28,6 +29,31 @@
         </div>
         <div class="body-right">
             <div class="placeholder">this is a placeholder for an image</div>
+        </div>
+    </div>
+
+    <!--Parte do container-->
+    <div class="container-gen">
+        <div class="container-title">Some random information.</div>
+        <div class="container">
+            <div class="container-info">
+                <div class="info">
+                    <div class="image-space"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <div class="image-space"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <div class="image-space"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <div class="image-space"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
