--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
         </div>
     </div>
 
-    <!--Parte do container-->
+    <!--Container-->
     <div class="container-gen">
         <div class="container-title">Some random information.</div>
         <div class="container">
-            <div class="container-info">
                 <div class="info">
                     <div class="image-space"></div>
                     <div class="text">this is some subtext under an illustration or image</div>
@@ -52,9 +51,19 @@
                 <div class="info">
                     <div class="image-space"></div>
                     <div class="text">this is some subtext under an illustration or image</div>
-                </div>
             </div>
         </div>
+    </div>
+
+    <!--Citação-->
+    <div class="quote">
+        <h3>
+            This is an inspiring quote, or a testimonial from a <br/>
+            customer. Maybe it's just filling up space, or maybe <br/>
+            people will actually read it. Who knows? All I know <br/>
+            is that it looks nice.
+        </h3>
+        <p class="quote-thor">-Thor, God of Thunder</p>
     </div>
 </body>
 </html>
