Fix call for action sign up padding

--- a/index.html
+++ b/index.html
@@ -65,5 +65,23 @@
         </h3>
         <p class="quote-thor">-Thor, God of Thunder</p>
     </div>
+
+    <!--Call to action-->
+    <div class="call-action">
+        <div class="text-left">
+            <div class="call-title">Call to action! It's time!</div>
+            <div class="call-subtext">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <div class="text-right">
+            <div class="call-signup">Sign up</div>
+        </div>
+    </div>
+
+    <!--Footer-->
+    <div class="footer">
+        <div class="footer-text">
+            Copyright © The Odin Project 2021
+        </div>
+    </div>
 </body>
 </html>
